--- a/app_test.ipynb
+++ b/app_test.ipynb
@@ -2,32 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\python\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator TfidfTransformer from version 0.22.2.post1 when using version 0.23.2. This might lead to breaking code or invalid results. Use at your own risk.\n",
-      "  warnings.warn(\n",
-      "c:\\python\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator TfidfVectorizer from version 0.22.2.post1 when using version 0.23.2. This might lead to breaking code or invalid results. Use at your own risk.\n",
-      "  warnings.warn(\n",
-      " * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import lightgbm as lgb\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -64,6 +41,20 @@
     "    \n",
     "    return response\n",
     "\n",
+    "def processing_message(message):\n",
+    "    true_words = []\n",
+    "    words = re.split(' ', message)\n",
+    "    for word in words:\n",
+    "        m = re.search('(\\w+)', word)\n",
+    "        if m is not None:\n",
+    "            good_word = m.group(0)\n",
+    "            true_words.append(good_word)\n",
+    "    stemming = PorterStemmer()\n",
+    "    stemmed_message_list = [stemming.stem(word) for word in true_words]\n",
+    "    stemmed_message = ' '.join(stemmed_message_list)\n",
+    "    return stemmed_message_list\n",
+    "\n",
+    "\n",
     "# предикт категории\n",
     "#{\"user_message\":\"example123rfssg gsfgfd\"}\n",
     "@application.route(\"/categoryPrediction\" , methods=['GET', 'POST'])  \n",
@@ -93,10 +84,7 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    port = int(os.getenv('PORT', 5000))\n",
-    "    application.run(debug=False, port=port, host='0.0.0.0' , threaded=True)\n",
-    "\n",
-    "\n",
-    "\n"
+    "    application.run(debug=False, port=port, host='0.0.0.0' , threaded=True)\n"
    ]
   },
   {
