--- a/app_test.ipynb
+++ b/app_test.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)\n"
+     ]
+    }
+   ],
    "source": [
     "import lightgbm as lgb\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -29,7 +48,8 @@
     "\n",
     "#загружаем модели из файла\n",
     "vec = pickle.load(open(\"./models/tfidf.pickle\", \"rb\"))\n",
-    "model = lgb.Booster(model_file='./models/lgbm_model.txt')\n",
+    "with open(\"./models/mlp_model.pkl\", 'rb') as file:\n",
+    "    model = pickle.load(file)\n",
     "\n",
     "\n",
     "# тестовый вывод\n",
@@ -68,14 +88,14 @@
     "        json_params = json.loads(getData) \n",
     "        \n",
     "        #напишите прогноз и верните его в ответе в параметре 'prediction'\n",
-    "\n",
+    "        category = model.predict_proba(vec.transform([json_params['user_message']]).toarray()).tolist()\n",
+    "        resp['category'] = category\n",
     "\n",
     "\n",
     "        \n",
     "    except Exception as e: \n",
     "        print(e)\n",
-    "        resp['message'] = e\n",
-    "      \n",
+    "        resp['message'] = e     \n",
     "    response = jsonify(resp)\n",
     "    \n",
     "    return response\n",
@@ -96,81 +116,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Aquila\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     C:\\Users\\Aquila\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "import datetime\n",
+    "import requests\n",
+    "import collections as co\n",
+    "import string\n",
+    "import re\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "from sumy.utils import get_stop_words as gsw1\n",
+    "from stop_words import get_stop_words as gsw2\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from io import StringIO\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import pickle\n",
+    "import re\n",
+    "from nltk.stem.porter import *\n",
+    "stemming = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {
     "code_folding": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-854e15048e0f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfactorize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'category'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'category_int'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "visitor i am verifi card the payment all charg post bank sofia hello sofia pleas stand onlin take some time resolv the issu ill an updat a minut thank patienc \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[0.8976279624223987, 0.10237203592529492, 1.6523064078978437e-09]]"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#сохраняем векторайзер\n",
-    "import pickle \n",
+    "#загружаем модели из файла\n",
+    "vec = pickle.load(open(\"./models/tfidf.pickle\", \"rb\"))\n",
+    "with open(\"./models/mlp_model.pkl\", 'rb') as file:\n",
+    "    model = pickle.load(file)\n",
+    "    \n",
+    "def cleaning_message(text):\n",
+    "    text = re.sub('\\[.*\\]', '', text)\n",
+    "    text = re.sub(\"\\!\", '', text)\n",
+    "    text = re.sub(\"\\'\", '', text)\n",
+    "    text = re.sub(\"[^A-Za-z0-9^,!.\\/'+-=]\", ' ', text)\n",
+    "    text = re.sub(\"\\s+\", ' ', text)    \n",
+    "    return text\n",
     "\n",
-    "labels, levels = pd.factorize(df['category'])\n",
-    "df['category_int'] = labels\n",
+    "def get_original_form(text):        \n",
+    "    try:\n",
+    "        words = re.split(' ', text)\n",
+    "        true_words = []\n",
+    "        for word in words:\n",
+    "            m = re.search('(\\w+)',word)\n",
+    "            if m is not None:\n",
+    "                good_word = m.group(0)\n",
+    "                true_words.append(good_word)\n",
+    "        tagged = nltk.pos_tag(true_words) \n",
+    "        tags = []\n",
+    "        for tag in tagged:        \n",
+    "            tags.append(tag[1])\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    stopWords =nltk.corpus.stopwords.words()\n",
+    "    LANGUAGE = 'english'\n",
     "\n",
-    "texts = df['message']\n",
+    "    sw0 = [\"yeah\",\"zola\",\"don\"]\n",
+    "    sw1 = gsw1(LANGUAGE)\n",
+    "    sw2 = gsw2('en')\n",
     "\n",
-    "vec = TfidfVectorizer(max_features=100)\n",
-    "tfidf_mat = vec.fit_transform(texts).toarray()\n",
-    "\n",
-    "\n",
-    "#vec - модель из прошлой практики\n",
-    "\n",
-    "#сохраняем модель в файл\n",
-    "pickle.dump(vec, open(\"tfidf.pickle\", \"wb\"))\n",
-    "\n",
-    "#загружаем модель из файла\n",
-    "vec = pickle.load(open(\"tfidf.pickle\", \"rb\"))\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### сохраняем бустинг\n",
-    "import lightgbm as lgb\n",
-    "train = pd.DataFrame(tfidf_mat)\n",
-    "train['category_int'] = df['category_int']\n",
-    "\n",
-    "train.dropna(inplace = True)\n",
-    "\n",
-    "target = 'category_int'\n",
-    "train_columns = list(set(train.columns) - set([target]))\n",
+    "    sw0.extend(list(sw1))\n",
+    "    sw0.extend(list(sw2))\n",
+    "    \n",
+    "    new_s = ''\n",
+    "    new_lw = []\n",
+    "    new_lt = []\n",
+    "    new_lwt = []\n",
+    "    for w,t,lw in zip(true_words, tags, tagged):\n",
+    "        if t in ['NN','VB','DT','NNS','VBP','VB']:\n",
+    "            new_s += w + ' '\n",
+    "            new_lw.append(w)\n",
+    "            new_lt.append(t)\n",
+    "            new_lwt.append(lw)\n",
+    "        elif w in sw0 or re.match('\\d+',w) is not None:\n",
+    "            continue     \n",
+    "    new_list = re.split(r'\\W+', new_s)    \n",
+    "    stemmed_list = [stemming.stem(word) for word in new_list] \n",
+    "    original_form = ' '.join(stemmed_list)\n",
+    "    return original_form      \n",
     "\n",
     "\n",
-    "lgb_data_train = lgb.Dataset(train[train_columns], \n",
-    "                             train[target].values, \n",
-    "                             free_raw_data=False\n",
-    "                            )\n",
-    "params = {\n",
-    "    'objective':'multiclass', \n",
-    "    'metric': 'multi_logloss',\n",
-    "    \"num_class\" : 3,\n",
-    "    'learning_rate': 0.01, \n",
-    "    'random_state':202008,\n",
-    "    'subsample':0.33,\n",
-    "    'colsample_bytree':0.33,\n",
-    "    'reg_lambda':4\n",
-    "}\n",
-    "\n",
-    "model = lgb.train(params, lgb_data_train, num_boost_round=100  )\n",
-    "\n",
-    "model.save_model('lgbm_model.txt')\n",
-    "\n",
-    "model = lgb.Booster(model_file='lgbm_model.txt')\n",
     "\n",
     "#test predict\n",
-    "message = 'hello i want to payment but it is blocked'\n",
-    "model.predict(vec.transform([message]).toarray())"
+    "message = \" chat transcript: visitor: i am attempting to verify my card however the payment is not posting. all charges typically post immediately with my bank. sofia: hello sofia: please stand by online, as it may take some time to resolve the issue. ill provide you with an update in a few minutes. thank you for your patience. \"\n",
+    "message = message.lower()\n",
+    "message = cleaning_message(message)\n",
+    "message = get_original_form(message)\n",
+    "print(message)\n",
+    "model.predict_proba(vec.transform([message]).toarray()).tolist()"
    ]
   },
   {
