--- a/app_test.ipynb
+++ b/app_test.ipynb
@@ -116,28 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 148,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Aquila\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     C:\\Users\\Aquila\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "\n",
     "import nltk\n",
-    "\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
     "from sumy.utils import get_stop_words as gsw1\n",
     "from stop_words import get_stop_words as gsw2\n",
     "\n",
@@ -148,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 149,
    "metadata": {
     "code_folding": []
    },
@@ -166,7 +153,7 @@
        "[[0.8976279624223987, 0.10237203592529492, 1.6523064078978437e-09]]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
