--- a/app_test.ipynb
+++ b/app_test.ipynb
@@ -116,9 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Aquila\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     C:\\Users\\Aquila\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -135,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 151,
    "metadata": {
     "code_folding": []
    },
@@ -153,7 +167,7 @@
        "[[0.8976279624223987, 0.10237203592529492, 1.6523064078978437e-09]]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
