--- a/app_test.ipynb
+++ b/app_test.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,13 +143,12 @@
     "from stop_words import get_stop_words as gsw2\n",
     "\n",
     "import pickle\n",
-    "from nltk.stem.porter import *\n",
-    "stemming = PorterStemmer()"
+    "from nltk.stem.porter import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 4,
    "metadata": {
     "code_folding": []
    },
@@ -167,7 +166,7 @@
        "[[0.8976279624223987, 0.10237203592529492, 1.6523064078978437e-09]]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +201,7 @@
     "    except:\n",
     "        pass\n",
     "    \n",
-    "    stopWords =nltk.corpus.stopwords.words()\n",
+    "    stopWords = nltk.corpus.stopwords.words()\n",
     "    LANGUAGE = 'english'\n",
     "\n",
     "    sw0 = [\"yeah\",\"zola\",\"don\"]\n",
@@ -224,7 +223,8 @@
     "            new_lwt.append(lw)\n",
     "        elif w in sw0 or re.match('\\d+',w) is not None:\n",
     "            continue     \n",
-    "    new_list = re.split(r'\\W+', new_s)    \n",
+    "    new_list = re.split(r'\\W+', new_s)\n",
+    "    stemming = PorterStemmer()\n",
     "    stemmed_list = [stemming.stem(word) for word in new_list] \n",
     "    original_form = ' '.join(stemmed_list)\n",
     "    return original_form      \n",
